--- a/notebook/ctse_chatbot.ipynb
+++ b/notebook/ctse_chatbot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9cfb57ad",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "d604bd02",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "039f4b3a",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4q/b19qv8r52lx5_bfplnjf1cjw0000gn/T/ipykernel_32514/3897068503.py:12: LangChainDeprecationWarning: Since Chroma 0.4.x the manual persistence method is no longer supported as docs are automatically persisted.\n",
+      "/var/folders/4q/b19qv8r52lx5_bfplnjf1cjw0000gn/T/ipykernel_52657/3897068503.py:4: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  embedding_function = HuggingFaceEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
+      "/Users/nikleshfernando/Desktop/SLIIT_UNI/Year 4/SEM 01/CTSE/Assignment-02/CTSE_CHATBOT_RAG/.conda/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/var/folders/4q/b19qv8r52lx5_bfplnjf1cjw0000gn/T/ipykernel_52657/3897068503.py:12: LangChainDeprecationWarning: Since Chroma 0.4.x the manual persistence method is no longer supported as docs are automatically persisted.\n",
       "  vectordb.persist()\n"
      ]
     }
@@ -127,10 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "02a79af5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/4q/b19qv8r52lx5_bfplnjf1cjw0000gn/T/ipykernel_52657/3740614862.py:3: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "  llm = Ollama(model=\"mistral\")\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_community.llms import Ollama\n",
     "\n",
@@ -139,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "7a3995e3",
    "metadata": {},
    "outputs": [],
@@ -164,19 +177,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fad63d76",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-05-12 04:38:26.126 python[52657:5739760] +[IMKClient subclass]: chose IMKClient_Modern\n",
+      "2025-05-12 04:38:26.126 python[52657:5739760] +[IMKInputSession subclass]: chose IMKInputSession_Modern\n",
+      "/var/folders/4q/b19qv8r52lx5_bfplnjf1cjw0000gn/T/ipykernel_52657/2983220144.py:3: LangChainDeprecationWarning: The method `BaseRetriever.get_relevant_documents` was deprecated in langchain-core 0.1.46 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  docs = retriever.get_relevant_documents(query)\n"
      ]
     }
    ],
